src/objects/DeveloperCommunityAssociation__c.object
<CustomObject>
    <description>MG_DeveloperCommunityAssociation</description>
    <fields>
        <fullName>Community_State__c</fullName>
        <formula>Community__r.State_Calc__c</formula>
        <label>Community State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <label>Community</label>
        <referenceTo>Community__c</referenceTo>
        <relationshipLabel>DeveloperCommunityAssociations</relationshipLabel>
        <relationshipName>DeveloperCommunityAssociations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Developer_State__c</fullName>
        <formula>TEXT(Developer__r.State__c)</formula>
        <label>Developer State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer__c</fullName>
        <label>Developer</label>
        <referenceTo>Developer__c</referenceTo>
        <relationshipLabel>DeveloperCommunityAssociations</relationshipLabel>
        <relationshipName>DeveloperCommunityAssociations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>DeveloperCommunityAssociation</label>
    <nameField>
        <label>DeveloperCommunityAssociation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DeveloperCommunityAssociations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>